--- a/CRM.Frontend/Shared/NavMenu.razor
+++ b/CRM.Frontend/Shared/NavMenu.razor
@@ -1,39 +1,72 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">CRM.Frontend</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+﻿@*<div class="nav-img">
+    <div class="img">
+        <img src="spyder_mask.png" />
     </div>
+    <a class="title" href="">SPYDER</a>
+</div>
+*@
+<div class="@NavMenuCssClass">
+    <ul class="nav flex-column">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" @onclick="() => ToggleNavMenu(NavSubmenu.None)" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Inicio
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" @onclick="() => TogleSubmenu(NavSubmenu.First)">
+                <span class="oi oi-person" aria-hidden="true"></span> Clientes
+            </NavLink>
+        </li>
+
+
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" @onclick="() => TogleSubmenu(NavSubmenu.Second)">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Oportunidades
+            </NavLink>
+        </li>
+
+        @if (navSubmenu == NavSubmenu.Second)
+        {
+            <li class="nav-item px-5">
+                <NavLink class="nav-link" @onclick="() => ToggleNavMenu()" href="counter">
+                    <span class="oi oi-graph" aria-hidden="true"></span> Oportunidad
+                </NavLink>
+            </li>
+            <li class="nav-item px-5">
+                <NavLink class="nav-link" @onclick="() => ToggleNavMenu()" href="fetchdata">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Actividades
+                </NavLink>
+            </li>
+        }
+    </ul>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
 
 @code {
-    private bool collapseNavMenu = true;
+    private enum NavSubmenu
+    {
+        None,
+        First,
+        Second
+    }
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private NavSubmenu navSubmenu = NavSubmenu.None;
+    private bool collapseNavMenu = false;
 
-    private void ToggleNavMenu()
+
+    private void ToggleNavMenu(NavSubmenu? submenu = null)
     {
         collapseNavMenu = !collapseNavMenu;
+        navSubmenu = submenu ?? navSubmenu;
+    }
+
+    private void TogleSubmenu(NavSubmenu submenu)
+    {
+        if (navSubmenu == submenu)
+            navSubmenu = NavSubmenu.None;
+        else
+            navSubmenu = submenu;
     }
 }
