--- a/CRM.Frontend/Shared/NavMenu.razor
+++ b/CRM.Frontend/Shared/NavMenu.razor
@@ -34,9 +34,15 @@
                 </NavLink>
             </li>
             <li class="nav-item px-5">
-                <NavLink class="nav-link" @onclick="() => ToggleNavMenu()" href="fetchdata">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Actividades
-                </NavLink>
+                <AuthorizeView Roles="Admin">
+                    <Authorized>
+                        <div class="nav-item px-3">
+                            <NavLink class="nav-link" @onclick="() => ToggleNavMenu()" href="fetchdata">
+                                <span class="oi oi-list-rich" aria-hidden="true"></span> Actividades
+                            </NavLink>
+                        </div>
+                    </Authorized>
+                </AuthorizeView>
             </li>
         }
     </ul>
