Login token generation

--- a/CRM.Frontend/App.razor
+++ b/CRM.Frontend/App.razor
@@ -4,6 +4,9 @@
             <Authorizing>
                 <p>Autorizando...</p>
             </Authorizing>
+            <NotAuthorized>
+                <p>No estas autorizado para ver este contenido...</p>
+            </NotAuthorized>
         </AuthorizeRouteView>
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
     </Found>
