--- a/CRM.Frontend/_Imports.razor
+++ b/CRM.Frontend/_Imports.razor
@@ -9,3 +9,4 @@
 @using CRM.Frontend
 @using CRM.Frontend.Shared
 @using Microsoft.AspNetCore.Components.Authorization
+@using CurrieTechnologies.Razor.SweetAlert2
