Add Register Component

--- a/CRM.Frontend/_Imports.razor
+++ b/CRM.Frontend/_Imports.razor
@@ -10,3 +10,7 @@
 @using CRM.Frontend.Shared
 @using Microsoft.AspNetCore.Components.Authorization
 @using CurrieTechnologies.Razor.SweetAlert2
+@using CRM.Frontend.Repositories
+@using CRM.Frontend.Auth
+@using CRM.Shared.DTOs
+@using CRM.Shared.Enums
