--- a/CRM.Frontend/Pages/Auth/Register.razor
+++ b/CRM.Frontend/Pages/Auth/Register.razor
@@ -8,57 +8,67 @@
 
 <EditForm Model="userDTO" OnValidSubmit="CreteUserAsync">
     <DataAnnotationsValidator />
-
-    <div class="row">
-        <div class="col-6">
-            <div class="mb-3">
-                <label>Nombres:</label>
-                <div>
-                    <InputText class="form-control" @bind-Value="@userDTO.FirstName" />
-                    <ValidationMessage For="@(() => userDTO.FirstName)" />
-                </div>
-            </div>
-            <div class="mb-3">
-                <label>Apellidos:</label>
-                <div>
-                    <InputText class="form-control" @bind-Value="@userDTO.LastName" />
-                    <ValidationMessage For="@(() => userDTO.LastName)" />
-                </div>
-            </div>
-            <div class="mb-3">
-                <label>Teléfono:</label>
-                <div>
-                    <InputText class="form-control" @bind-Value="@userDTO.PhoneNumber" />
-                    <ValidationMessage For="@(() => userDTO.PhoneNumber)" />
-                </div>
-            </div>
-            <div class="mb-3">
-                <label>Email:</label>
-                <div>
-                    <InputText class="form-control" @bind-Value="@userDTO.Email" />
-                    <ValidationMessage For="@(() => userDTO.Email)" />
-                </div>
-            </div>
+    <div class="card">
+        <div class="card-header">
+            <span>
+                <i class="oi oi-person" /> Registrar Nuevo  Usuario
+                <button class="btn btn-sm btn-primary float-end" type="submit"><i class="oi oi-check" /> Registrar</button>
+            </span>
         </div>
-        <div class="col-6">
-            <div class="mb-3">
-                <label>Contraseña:</label>
-                <div>
-                    <InputText type="password" class="form-control" @bind-Value="@userDTO.Password" />
-                    <ValidationMessage For="@(() => userDTO.Password)" />
+        <div class="card-body">
+
+            <div class="row">
+                <div class="col-6">
+                    <div class="mb-3">
+                        <label>Nombres:</label>
+                        <div>
+                            <InputText class="form-control" @bind-Value="@userDTO.FirstName" />
+                            <ValidationMessage For="@(() => userDTO.FirstName)" />
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label>Apellidos:</label>
+                        <div>
+                            <InputText class="form-control" @bind-Value="@userDTO.LastName" />
+                            <ValidationMessage For="@(() => userDTO.LastName)" />
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label>Teléfono:</label>
+                        <div>
+                            <InputText class="form-control" @bind-Value="@userDTO.PhoneNumber" />
+                            <ValidationMessage For="@(() => userDTO.PhoneNumber)" />
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label>Email:</label>
+                        <div>
+                            <InputText class="form-control" @bind-Value="@userDTO.Email" />
+                            <ValidationMessage For="@(() => userDTO.Email)" />
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3">
-                <label>Confirmación de contraseña:</label>
-                <div>
-                    <InputText type="password" class="form-control" @bind-Value="@userDTO.PasswordConfirm" />
-                    <ValidationMessage For="@(() => userDTO.PasswordConfirm)" />
+                <div class="col-6">
+                    <div class="mb-3">
+                        <label>Contraseña:</label>
+                        <div>
+                            <InputText type="password" class="form-control" @bind-Value="@userDTO.Password" />
+                            <ValidationMessage For="@(() => userDTO.Password)" />
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label>Confirmación de contraseña:</label>
+                        <div>
+                            <InputText type="password" class="form-control" @bind-Value="@userDTO.PasswordConfirm" />
+                            <ValidationMessage For="@(() => userDTO.PasswordConfirm)" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <button class="btn btn-primary" type="submit">Registrar</button>
 </EditForm>
+
 
 @code {
     private UserDTO userDTO = new();
@@ -82,7 +92,7 @@
         }
         catch (Exception ex)
         {
-            
+
             throw;
         }
     }
