--- a/CRM.Frontend/Shared/NavMenu.razor
+++ b/CRM.Frontend/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" @onclick="() => TogleSubmenu(NavSubmenu.First)">
+            <NavLink class="nav-link" @onclick="() => ToggleNavMenu(NavSubmenu.None)" href="clients" Match="NavLinkMatch.All">
                 <span class="oi oi-person" aria-hidden="true"></span> Clientes
             </NavLink>
         </li>
