--- a/CRM.Frontend/Pages/Clients/ClientForm.razor
+++ b/CRM.Frontend/Pages/Clients/ClientForm.razor
@@ -1,4 +1,7 @@
 ﻿@inject SweetAlertService sweetAlertService
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize]
 
 <NavigationLock OnBeforeInternalNavigation="OnBeforeInternalNavigation"></NavigationLock>
 
