--- a/CRM.Frontend/Pages/Clients/ClientsIndex.razor
+++ b/CRM.Frontend/Pages/Clients/ClientsIndex.razor
@@ -1,4 +1,8 @@
 ﻿@page "/clients"
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize]
+
 
 @inject IRepository repository
 
