--- a/CRM.Frontend/Pages/FetchData.razor
+++ b/CRM.Frontend/Pages/FetchData.razor
@@ -1,5 +1,9 @@
 ﻿@page "/fetchdata"
 @inject HttpClient Http
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize]
+
 
 <PageTitle>Weather forecast</PageTitle>
 
