--- a/CRM.Frontend/App.razor
+++ b/CRM.Frontend/App.razor
@@ -1,14 +1,24 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿@using CRM.Frontend.Pages
+@using Microsoft.AspNetCore.Components.Authorization
+@inject NavigationManager navigationManager
+
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-            <Authorizing>
-                <p>Autorizando...</p>
-            </Authorizing>
             <NotAuthorized>
-                <p>No estas autorizado para ver este contenido...</p>
+                @{
+                    if(context.User.Identity?.IsAuthenticated != true)
+                    {
+                        navigationManager.NavigateTo("/");
+                    }
+                    else
+                    {
+                        <p class="alert alert-danger">No estas autorizado para ingresar a esta página</p>
+                    }
+                }
             </NotAuthorized>
         </AuthorizeRouteView>
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+
     </Found>
     <NotFound>
         <CascadingAuthenticationState>
