--- a/CRM.Frontend/Pages/Auth/ChangePassword.razor
+++ b/CRM.Frontend/Pages/Auth/ChangePassword.razor
@@ -2,6 +2,10 @@
 @inject IRepository repository
 @inject SweetAlertService sweetAlertService
 @inject NavigationManager navigationManager
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize]
+
 
 @if (loading)
 {
