--- a/CRM.Frontend/Pages/Clients/ClientCreate.razor
+++ b/CRM.Frontend/Pages/Clients/ClientCreate.razor
@@ -2,6 +2,9 @@
 @inject IRepository repository
 @inject NavigationManager navigationManager
 @inject SweetAlertService sweetAlertService
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize]
 
 <h3>Crear País</h3>
 
