--- a/CRM.Frontend/Pages/Counter.razor
+++ b/CRM.Frontend/Pages/Counter.razor
@@ -1,4 +1,7 @@
 ﻿@page "/counter"
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize]
 
 <PageTitle>Counter</PageTitle>
 
