--- a/CRM.Frontend/Pages/Index.razor
+++ b/CRM.Frontend/Pages/Index.razor
@@ -1,4 +1,7 @@
-﻿@page "/"
+﻿@page "/Index"
+@using Microsoft.AspNetCore.Authorization;
+@using Microsoft.AspNetCore.Components.Authorization;
+@attribute [Authorize]
 
 <PageTitle>Index</PageTitle>
 
@@ -16,5 +19,3 @@
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
