--- a/CRM.Frontend/Shared/MainLayout.razor
+++ b/CRM.Frontend/Shared/MainLayout.razor
@@ -7,9 +7,12 @@
 
     <main>
         <div class="top-row px-4">
-            <AuthLinks />
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">Acerca de</a>
-
+            <AuthorizeView>
+                <Authorized>
+                    Hola, <a href="EditUser" class="nav-link btn btn-link">@context.User.Identity!.Name</a>
+                    <a href="Logout" class="nav-link btn btn-link">Cerrar Sesión</a>
+                </Authorized>
+            </AuthorizeView>
         </div>
 
         <article class="content px-4">
