--- a/CRM.Frontend/_Imports.razor
+++ b/CRM.Frontend/_Imports.razor
@@ -15,3 +15,5 @@
 @using CRM.Shared.DTOs
 @using CRM.Shared.Enums
 @using CRM.Shared.Entities
+@using Blazored.Modal
+@using Blazored.Modal.Services
