--- a/CRM.Frontend/App.razor
+++ b/CRM.Frontend/App.razor
@@ -2,30 +2,32 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @inject NavigationManager navigationManager
 
-<Router AppAssembly="@typeof(App).Assembly">
-    <Found Context="routeData">
-        <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-            <NotAuthorized>
-                @{
-                    if(context.User.Identity?.IsAuthenticated != true)
-                    {
-                        navigationManager.NavigateTo("/");
+<CascadingBlazoredModal Position="ModalPosition.Middle" Size="ModalSize.Large" HideHeader="true" DisableBackgroundCancel="true" AnimationType="ModalAnimationType.FadeInOut">
+    <Router AppAssembly="@typeof(App).Assembly">
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+                <NotAuthorized>
+                    @{
+                        if (context.User.Identity?.IsAuthenticated != true)
+                        {
+                            navigationManager.NavigateTo("/");
+                        }
+                        else
+                        {
+                            <p class="alert alert-danger">No estas autorizado para ingresar a esta página</p>
+                        }
                     }
-                    else
-                    {
-                        <p class="alert alert-danger">No estas autorizado para ingresar a esta página</p>
-                    }
-                }
-            </NotAuthorized>
-        </AuthorizeRouteView>
+                </NotAuthorized>
+            </AuthorizeRouteView>
 
-    </Found>
-    <NotFound>
-        <CascadingAuthenticationState>
-            <PageTitle>No encontrado</PageTitle>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p role="alert">Lo sentimos no hay nada en esta ruta.</p>
-            </LayoutView>
-        </CascadingAuthenticationState>
-    </NotFound>
-</Router>
+        </Found>
+        <NotFound>
+            <CascadingAuthenticationState>
+                <PageTitle>No encontrado</PageTitle>
+                <LayoutView Layout="@typeof(MainLayout)">
+                    <p role="alert">Lo sentimos no hay nada en esta ruta.</p>
+                </LayoutView>
+            </CascadingAuthenticationState>
+        </NotFound>
+    </Router>
+</CascadingBlazoredModal>
