--- a/CRM.Frontend/Shared/NavMenu.razor
+++ b/CRM.Frontend/Shared/NavMenu.razor
@@ -21,10 +21,8 @@
             </NavLink>
         </li>
 
-
-
         <li class="nav-item px-3">
-            <NavLink class="nav-link" @onclick="() => TogleSubmenu(NavSubmenu.Second)">
+            <NavLink class="nav-link" @onclick="() => TogleSubmenu(NavSubmenu.Second)" >
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Oportunidades
             </NavLink>
         </li>
@@ -32,7 +30,7 @@
         @if (navSubmenu == NavSubmenu.Second)
         {
             <li class="nav-item px-5">
-                <NavLink class="nav-link" @onclick="() => ToggleNavMenu()" href="counter">
+                <NavLink class="nav-link" @onclick="() => ToggleNavMenu()" href="oportunities">
                     <span class="oi oi-graph" aria-hidden="true"></span> Oportunidad
                 </NavLink>
             </li>
