--- a/CRM.Frontend/Shared/NavMenu.razor
+++ b/CRM.Frontend/Shared/NavMenu.razor
@@ -22,7 +22,7 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" @onclick="() => TogleSubmenu(NavSubmenu.Second)" >
+            <NavLink class="nav-link" @onclick="() => TogleSubmenu(NavSubmenu.Second)">
                 <span class="oi oi-bar-chart" aria-hidden="true"></span> Oportunidades
             </NavLink>
         </li>
@@ -37,11 +37,9 @@
             <li class="nav-item px-5">
                 <AuthorizeView Roles="Admin">
                     <Authorized>
-                        <div class="nav-item px-3">
-                            <NavLink class="nav-link" @onclick="() => ToggleNavMenu()" href="fetchdata">
-                                <span class="oi oi-list-rich" aria-hidden="true"></span> Actividades
-                            </NavLink>
-                        </div>
+                        <NavLink class="nav-link" @onclick="() => ToggleNavMenu()" href="activities">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Actividades
+                        </NavLink>
                     </Authorized>
                 </AuthorizeView>
             </li>
